Sort API by title
